--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,6 @@
   <h1>My Test Page</h1>
 
   <!-- Load your chatbot -->
-  <script src="https://www.prepto.pro/js/chatbot.js"></script>
+  <script src="http://localhost:3000/js/chatbot.js"></script>
 </body>
 </html>
