--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/app.js"></script>
-		<script src="https://www.prepto.pro/js/chatbot.js"></script>
+		<script src="https://real-mate.vercel.app/js/chatbot.js"></script>
 	</body>
 
 </html>
