--- a/index.html
+++ b/index.html
@@ -752,7 +752,14 @@
             <div class="section-title">
                 <h2>My Properties</h2>
                 <div data-widget="listing-widget" data-props='{ "id": 1 }'></div>
-                <script src="http://localhost:3000/widget.js"></script>
+                <!-- <script src="https://real-mate.vercel.app/widget.js"></script> -->
+                <script>
+                    const isLocal = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
+                    const scriptUrl = isLocal
+                        ? 'http://localhost:3000/js/widget.js'
+                        : 'https://real-mate.vercel.app/js/widget.js';
+                    document.write(`<script src="${scriptUrl}"><\/script>`);
+                </script>
             </div>
             <div class="section-title">
                 <h2>My Premium Services</h2>
