--- a/index.html
+++ b/index.html
@@ -804,6 +804,29 @@
             </div>
         </div>
     </section>
+    
+<vapi-widget
+  public-key="9b4baf06-06ba-487b-a4ce-dfb62c65ea58"
+  assistant-id="e3b40b88-55c4-4166-8b17-974eb3804736"
+  mode="chat"
+  theme="dark"
+  base-bg-color="#000000"
+  accent-color="#14B8A6"
+  cta-button-color="#000000"
+  cta-button-text-color="#ffffff"
+  border-radius="large"
+  size="full"
+  position="bottom-right"
+  title="How Can I Help?"
+  start-button-text="Start"
+  end-button-text="End Call"
+  chat-first-message="Hey, How can I help you today?"
+  chat-placeholder="Type your message..."
+  voice-show-transcript="true"
+  consent-required="false"
+></vapi-widget>
+
+<script src="https://unpkg.com/@vapi-ai/client-sdk-react/dist/embed/widget.umd.js" async type="text/javascript"></script>lient-sdk-react/dist/embed/widget.umd.js" async type="text/javascript"></script>
 
     <!-- About Section -->
     <section id="about">
@@ -981,7 +1004,6 @@
             }
         });
     </script>
-    <script src="https://real-mate.vercel.app/js/chatbot.js"></script>
 </body>
 
 </html>
