rename widget tag

--- a/index.html
+++ b/index.html
@@ -980,11 +980,11 @@
             }
         });
     </script>
-    <script src="https://real-mate.vercel.app/js/real-mate-widget.js" async></script>
-<real-mate-widget
+    <script src="https://real-mate.vercel.app/js/real-mate-chat-widget.js" async></script>
+<real-mate-chat-widget
   assistant-id="99977b65-ebd7-45aa-90e5-3e62167d6640"
   public-key="9b4baf06-06ba-487b-a4ce-dfb62c65ea58"
-></real-mate-widget>
+></real-mate-chat-widget>
 </body>
 
 </html>
