new widget test

--- a/index.html
+++ b/index.html
@@ -751,15 +751,17 @@
         <div class="container">
             <div class="section-title">
                 <h2>My Properties</h2>
-                <div data-widget="listing-widget" data-props='{ "id": 1 }'></div>
-                <!-- <script src="https://real-mate.vercel.app/widget.js"></script> -->
+                <div data-widget="listing-widget" data-props='{ "id": 8 }'></div>
+                <script src="http://localhost:3000/js/widget.js"></script>
+                <!-- <div data-widget="listing-widget" data-props='{ "id": 1 }'></div>
+                <script src="https://real-mate.vercel.app/widget.js"></script> 
                 <script>
                     const isLocal = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
                     const scriptUrl = isLocal
                         ? 'http://localhost:3000/js/widget.js'
                         : 'https://real-mate.vercel.app/js/widget.js';
                     document.write(`<script src="${scriptUrl}"><\/script>`);
-                </script>
+                </script>-->
             </div>
             <div class="section-title">
                 <h2>My Premium Services</h2>
