--- a/index.html
+++ b/index.html
@@ -751,8 +751,8 @@
         <div class="container">
             <div class="section-title">
                 <h2>My Properties</h2>
-                <div data-widget="listing-widget" data-props='{ "id": 8 }'></div>
-                <script src="http://localhost:3000/js/widget.js"></script>
+                <div data-widget="listing-widget" data-props='{ "id": 4 }'></div>
+                <script src="http://localhost:3000/js/widget.js" async></script>
                 <!-- <div data-widget="listing-widget" data-props='{ "id": 1 }'></div>
                 <script src="https://real-mate.vercel.app/widget.js"></script> 
                 <script>
